# YoctoGL-Python

./: .gitignore  CMakeLists.txt  Homework4.md  error.txt  error_cmake.txt  error_cmake1.txt  readme.md  setup.py
apps/: CMakeLists.txt
apps/yimageproc/: yimageproc.ipynb  yimageproc.py
apps/ysceneproc/: ysceneproc.ipynb  ysceneproc.py
apps/yscenetrace/: CMakeLists.txt  test.cpp  yscenetrace.h  yscenetrace_bindings.cpp  yscentrace.py
apps/yshapeproc/: yshapeproc.py
libs/: CMakeLists.txt
libs/yocto/: CMakeLists.txt  yocto_commonio.h  yocto_sceneio.cpp  yocto_sceneio.h  yocto_shape.cpp  yocto_shape.h  yocto_trace.cpp
libs/yocto_extension/: CMakeLists.txt  yocto_extension.cpp  yocto_extension.h
libs/yocto_pathtrace/: CMakeLists.txt  yocto_pathtrace.cpp  yocto_pathtrace.h
scripts/: run.sh
yocto_pathextension.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
